# BoltDown

./: .editorconfig  .gitignore  .gitleaksignore  .lintstagedrc.json  .prettierrc  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MEMORY.md  README.md  commitlint.config.js  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  release-please-config.json  rustfmt.toml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.docs/project/planning/: backlog.md  code-block-live-split-parity-plan.md
.docs/ref/: codemirror6-patterns.md  sanitization.md  tauri-react-integration.md  wysiwyg-architecture.md  zustand-patterns.md
.docs/wiki/how-to/: cicd-setup.md
.github/: dependabot.yml
.github/workflows/: build.yaml  ci.yaml  ci.yml  quality-lint.yaml  quality-test.yaml  release-please.yaml  release.yaml  security-scan.yaml  security-weekly.yaml
docs/: phase3-backlog.md  polish-backlog.md
docs/ref/: scroll-sync.md
src/: AGENTS.md  App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: AGENTS.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: directory.rs  file.rs  ime.rs  mod.rs  settings.rs
src-tauri/src/utils/: path.rs
src/components/: AGENTS.md
src/components/about/: AboutModal.tsx  ChangelogModal.tsx
src/components/common/: AGENTS.md  ErrorBoundary.tsx  IconButton.tsx
src/components/editor/: AGENTS.md  EditorToolbar.tsx  MarkdownEditor.tsx  TabBar.tsx  editorUtils.test.ts  editorUtils.ts  formatCommands.ts
src/components/findreplace/: AGENTS.md  FindReplaceModal.tsx
src/components/layout/: AGENTS.md  Footer.tsx  Header.tsx  MainLayout.tsx
src/components/preview/: AGENTS.md  MarkdownPreview.tsx
src/components/settings/: AGENTS.md  SettingsModal.tsx
src/components/shortcuts/: ShortcutsModal.tsx
src/components/sidebar/: AGENTS.md  FileTree.tsx  FileTreeNode.tsx  OutlinePanel.tsx  Sidebar.tsx  (+2 more)
src/constants/: changelog.ts  feedback.ts  file.ts  findReplace.ts  settingsLimits.ts  shortcuts.ts  sidebar.ts  storage.ts  theme.ts  welcomeContent.ts
src/contexts/: AGENTS.md  EditorViewContext.tsx
src/hooks/: AGENTS.md  useAutoSave.ts  useAutoUpdate.ts  useCustomCss.ts  useDocumentStats.ts  useExport.ts  useFileSystem.ts  useKeyboardShortcuts.ts  useMarkdownParser.ts  useOutline.ts  useSplitScrollSync.ts  useTheme.ts
src/stores/: AGENTS.md  editorStore.ts  findReplaceStore.ts  settingsStore.ts  sidebarStore.ts  tabStore.ts
src/styles/: codeblock.css  tokens.css
src/test/: setup.ts
src/types/: AGENTS.md  editor.ts  settings.ts  sidebar.ts
src/utils/: AGENTS.md  cache.ts  directoryLoader.ts  fileCopy.ts  imagePath.ts  markdownConfig.test.ts  markdownConfig.ts  markdownText.ts  sanitize.ts  settingsStorage.ts  tauri.ts  themeRuntime.ts  tocPlugin.ts
tests/: AGENTS.md
tests/e2e/: example.spec.ts
(+34 files in other folders)
