[package]
name = "boltdown"
version = "0.1.4"
description = "Lightning-fast Markdown editor built with Tauri"
authors = ["PignuAnte (Ai-Scream)"]
license = "MIT"
repository = "https://github.com/ai-screams/BoltDown"
homepage = "https://boltdown.io"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "boltdown"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri Core
tauri = { version = "2.0", features = [
    "protocol-asset",
    "devtools",
    "macos-private-api",
] }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-updater = "2.0"
tauri-plugin-process = "2.0"

# Async Runtime
tokio = { version = "1.40", features = ["fs", "rt-multi-thread", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
thiserror = "2.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
incremental = true
